# yt-transcriber

./: .gitignore  pyproject.toml
yt_transcriber/: __init__.py  audio_extraction.py  transcribe.py
